3回目のコミット。like関係とその他画面修正

--- a/portfolio/css/slick-theme.css
+++ b/portfolio/css/slick-theme.css
@@ -91,6 +91,7 @@
 {
     font-family: "Font Awesome 5 Free";
     content: "\f104";
+    color:white;
     font-weight: 900;
     font-size: 30px;
 }
@@ -118,6 +119,7 @@
 {
     font-family: "Font Awesome 5 Free";
     content: "\f105";
+    color:white;
     font-weight: 900;
     font-size: 30px;
 }
