--- a/templates/portfolio/contact_mail_complete.html.twig
+++ b/templates/portfolio/contact_mail_complete.html.twig
@@ -12,9 +12,9 @@
 
 	<body>
 		{% include "header.html.twig" %}
-		<div id="contact-wrapper">
+		<div id="message-wrapper">
 			<div class="container">
-				<h1 class="">お問い合わせいただき、ありがとうございました。</h1>
+				<h1>お問い合わせいただき、ありがとうございました。</h1>
 				<p class="contents">問い合わせを受付いたしました。<br>
 					3営業日以内にご返信させていただきます。<br>
 					今しばらくお待ちくださいませ。</p>
