--- a/templates/portfolio/payment.html.twig
+++ b/templates/portfolio/payment.html.twig
@@ -29,7 +29,7 @@
 						{% for value in dataArr %}
 							<div class="item">
 								<div class="image">
-									<img src="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}upimages/{{value.image}}" alt="{{value.item_name}}">
+									<img src="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}upimages/{{value.image.0}}" alt="{{value.item_name}}">
 								</div>
 								<div class="item-detail">
 									<p class="name">{{value.item_name}}</p>
