--- a/portfolio/css/style.scss
+++ b/portfolio/css/style.scss
@@ -172,6 +172,7 @@ header {
 #index-wrapper {
   .container {
     font-size: 1.6rem;
+
     #top-image {
       width: 100%;
       height: 600px;
@@ -239,7 +240,7 @@ header {
       .item-list {
         display: flex;
         flex-wrap: wrap;
-        width: 90%;
+        width: 80%;
         margin: 0 auto;
         .item {
           width: 250px;
@@ -268,11 +269,21 @@ header {
               display: block;
               margin-left: auto;
               text-align: right;
+
               span {
                 font-weight: bold;
               }
             }
           }
+        }
+      }
+    }
+
+    .likes {
+      .fas {
+        color: red;
+        span {
+          color: black;
         }
       }
     }
@@ -473,6 +484,15 @@ header {
   }
 }
 
+.likes {
+  .fas {
+    color: red;
+    span {
+      color: black;
+    }
+  }
+}
+
 .pop-up-p {
   text-align: right;
   .pop-up {
@@ -496,6 +516,9 @@ header {
 #category-search {
   padding-right: 30px;
   margin: 30px 0;
+  p {
+    margin: 10px 0;
+  }
   @include mq(tab) {
     display: none;
   }
@@ -614,9 +637,15 @@ footer {
       margin-left: auto;
       .item-image {
         width: 400px !important;
+        img {
+          height: 270px;
+        }
       }
       .item-nav {
         width: 400px !important;
+        img {
+          height: 94px;
+        }
       }
       @include mq(sp) {
         .item-image {
@@ -773,8 +802,8 @@ footer {
         height: 150px;
         text-align: center;
         img {
-          width: 100px;
-          height: 100px;
+          width: 170px;
+          height: 120px;
         }
       }
       .item-detail {
@@ -1360,8 +1389,8 @@ footer {
           .image {
             float: left;
             img {
-              width: 100px;
-              height: 100px;
+              width: 170px;
+              height: 120px;
             }
           }
           .item-detail {
@@ -1412,7 +1441,7 @@ footer {
 
 // contact_mail_complete.html.twig
 // contact_mail_fail.html.twig --------------------------
-#contact-wrapper {
+#message-wrapper {
   font-size: 1.6rem;
   .container {
     width: 80%;
@@ -1430,6 +1459,14 @@ footer {
     }
     .tel {
       margin-bottom: 30px;
+    }
+    .url {
+      margin: 10px 0;
+      a {
+        &:hover {
+          color: $hover_color;
+        }
+      }
     }
   }
 }
@@ -1522,14 +1559,14 @@ footer {
     }
     .url {
       text-align: center;
-      a{
-        &:hover{
-          color:$hover_color;
+      a {
+        &:hover {
+          color: $hover_color;
         }
       }
     }
-    @include submitbutton (){
-      padding:10px 5px;
+    @include submitbutton() {
+      padding: 10px 5px;
     }
   }
 }
