--- a/templates/portfolio/viewlikes.html.twig
+++ b/templates/portfolio/viewlikes.html.twig
@@ -1,5 +1,75 @@
 <li class="likes">
 	<div class="btn-like" data-item-id="{{value.item_id}}">
+			{% if  like_exsits(value.item_id) == true %}
+				<i class="fas red fa-heart">
+					<span>
+						{% for like in likeArr %}
+							{% if like.item_id == value.item_id %}
+								{{like.likes}}
+							{% endif %}
+						{% endfor %}
+					</span>
+				</i>
+			{% else %}
+				<i class="far fa-heart">
+					<span>
+						{% for like in likeArr %}
+							{% if like.item_id == value.item_id %}
+								{{like.likes}}
+							{% endif %}
+						{% endfor %}
+					</span>
+				</i>
+			{% endif %}
+		{# {% endfor %}
+	{# </div>
+</li> #}
+
+
+{# <li class="likes">
+	<div class="btn-like" data-item-id="{{value.item_id}}">
+		{% for likeMember in likeMemberArr %}
+			{% if  likeMember.item_id == value.item_id %}
+				<i class="fas red fa-heart">
+					<span>
+						{% for like in likeArr %}
+							{% if like.item_id == value.item_id %}
+								{{like.likes}}
+							{% endif %}
+						{% endfor %}
+					</span>
+				</i>
+			{% else %}
+				<i class="far fa-heart">
+					<span>
+						{% for like in likeArr %}
+							{% if like.item_id == value.item_id %}
+								{{like.likes}}
+							{% endif %}
+						{% endfor %}
+					</span>
+				</i>
+			{% endif %}
+		{% endfor %}
+	</div>
+</li> #}
+
+
+
+
+
+{# <i class="fas red fa-heart">
+					<span>
+						{% for like in likeArr %}
+							{% if like.item_id == value.item_id %}
+								{{like.likes}}
+							{% endif %}
+						{% endfor %}
+					</span>
+				</i>
+			</div>
+		</li>
+		
 		<i class="far fa-heart">
 			<span>
 				{% for like in likeArr %}
@@ -8,51 +78,4 @@
 					{% endif %}
 				{% endfor %}
 			</span>
-		</i>
-	</div>
-</li>
-
-
-{# <li class="likes">
-	<div class="btn-like" data-item-id="{{value.item_id}}"><i class="far fa-heart"></i><span>
-			{% for like in likeArr %}
-				{% if like.item_id == value.item_id %}
-					{{like.likes}}
-				{% endif %}
-			{% endfor %}
-		</span>
-	</div>
-</li> #}
-
-{# 旧作いいね操作命令文 #}
-{# {% set continue = false %}
-			{% for like in likeArr %}
-			  {% if like.item_id != value.item_id %}
-			    {% set continue = true %}
-			  {% endif %}
-			  {% if not continue %}
-			    {{like.likes}}
-			  {% endif %}
-			  {% if continue %}
-			    {% set continue = false %}
-			  {% endif %}
-			{% endfor %} #}
-
-{# {% for user in likeUser %}
-	{% if value.item_id in user.item_id %}
-		<i class="fas fa-heart red"></i>
-	{% elseif not value.item_id in user.item_id  %}
-		<i class="far fa-heart"></i>
-	{% endif %}
-{% endfor %} #}
-
-{# {% set break = false %}
-		{% for label in likeMemArr if not break %}
-			{% if id in label.mem_id %}
-				<i class="far fa-heart red"></i>
-				{% set break = true %}
-			{% else %}
-				<i class="fas fa-heart"></i>
-				{% set break = true %}
-			{% endif %}
-		{% endfor %} #}
+		</i> #}
