--- a/portfolio/css/_common.scss
+++ b/portfolio/css/_common.scss
@@ -21,11 +21,11 @@ ul {
 
 a{
   text-decoration: none;
-  color: #000;
+  color:$font_color;
 }
 
 p{
-  margin:0;
+  margin:5px;
 }
 
 .Required {
