--- a/templates/portfolio/myitemedit.html.twig
+++ b/templates/portfolio/myitemedit.html.twig
@@ -101,7 +101,7 @@
 				</form>
 				<div>
 					<p class="url" style="text-align:center;">
-						<a href="http://localhost/DT/portfolio/submitItem.php">一覧へ移動する</a>
+						<a href="{{ constant('portfolio\\Bootstrap::ENTRY_URL')}}submit_item.php ">出品リスト一覧に戻る</a>
 					</p>
 				</div>
 			</div>
