--- a/templates/portfolio/footer.html.twig
+++ b/templates/portfolio/footer.html.twig
@@ -1,8 +1,13 @@
-		<footer>
-			<div class="footer-menu">
-				<ul>
-					<li><a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}contact.php">お問い合わせ</a></li>
-					<li><a href="https://myportfolio-ea031.web.app/">サイト作成者</a></li>
-				</ul>
-			</div>
-		</footer>
+<footer>
+	<div class="footer-menu">
+		<ul>
+			<li class="contact">
+				<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}contact.php">お問い合わせ</a>
+			</li>
+			<li class="self-info">
+				<a href="https://myportfolio-ea031.web.app/">サイト作成者自己紹介サイト</a>
+			</li>
+		</ul>
+		<p class="copyright">© 2020 koki kamei</p>
+	</div>
+</footer>
