--- a/templates/portfolio/mypage.html.twig
+++ b/templates/portfolio/mypage.html.twig
@@ -40,7 +40,7 @@
 							<i class="far fa-list-alt fa-4x"></i>
 						</li>
 						<li>出品リストの確認</li>
-						<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}submit_Item.php"></a>
+						<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}submit_item.php"></a>
 					</ul>
 				</div>
 				<div class="menu-box">
