--- a/templates/portfolio/header.html.twig
+++ b/templates/portfolio/header.html.twig
@@ -34,7 +34,7 @@
 			</li>
 			<li>
 				{% if id != '' %}
-					<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}orderhistory.php">
+					<a href="{{constant('portfolio\\Bootstrap::ENTRY_URL')}}order_history.php">
 						<i class="fas fa-clipboard-list fa-lg"></i>
 						<span>購入履歴</span>
 					</a>
