--- a/templates/portfolio/myitem_edit.html.twig
+++ b/templates/portfolio/myitem_edit.html.twig
@@ -12,7 +12,7 @@
 		{% include "header.html.twig" %}
 		<div id="form-wrapper">
 			<div class="container">
-				<form method="post" action="myitemedit.php" enctype="multipart/form-data">
+				<form method="post" action="myitem_edit.php" enctype="multipart/form-data">
 					<h2 id="title">
 						商品編集
 					</h2>
