--- a/templates/portfolio/order_history.html.twig
+++ b/templates/portfolio/order_history.html.twig
@@ -44,7 +44,7 @@
 											<li class="price">&yen;{{val.price | number_format(0, '.', ',')}}</li>
 											<li class="quantity">数量:{{val.quantity}}</li>
 											<li class="item-detail">
-												<a href="{{ constant('portfolio\\Bootstrap::ENTRY_URL') }}itemdetail.php?item_id={{ val.item_id }}">商品画面へ</a>
+												<a href="{{ constant('portfolio\\Bootstrap::ENTRY_URL') }}item_detail.php?item_id={{ val.item_id }}">商品画面へ</a>
 											</li>
 											<li></li>
 										</ul>
